assets/css/styles.css
@import url("http://fonts.cdnfonts.com/css/tuffy");
@import url("https://fonts.googleapis.com/css?family=Cherry Bomb");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

:root {
  /* LIGHT MODE */
  --c-light-text: #8a5757;
  --c-light-background: #f5f5f5;
  --c-light-pink: #ff02f2;

  /* DARK MODE */
  --c-dark-text: #f5f5f5;
  --c-dark-background: #8a5757;
  --c-dark-pink: #712e6d;

  --c-text-secondary: #f5f5f5;
}

.theme-container {
  /* --c é só uma abreviação de Color nada de mais :D */
  --c-text: var(--c-light-text);
  --c-background: var(--c-light-background);

  color: var(--c-text);
  background-color: var(--c-background);
}

.dark-mode-checkbox:checked ~ .theme-container {
  --c-text: var(--c-dark-text);
  --c-text-secondary: var(--c-text-secondary);
  --c-background: var(--c-dark-background);
}

.position--checkbox {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  opacity: 1;
}

/* .snap-scroll {
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100vh;
    scroll-snap-type: y mandatory;
} */

p {
  font-family: "Tuffy", sans-serif;
  font-size: 28px;
  color: var(--c-text);
}

body {
  background-color: var(--c-background);
  overflow-y: hidden;
}

header {
  padding: 30px 30px;
  margin-bottom: 100px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  font-size: 48px;
  scroll-snap-align: top;
}

footer {
  background-color: var(--c-background);
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  scroll-snap-align: bottom;
}

.snap-scroll {
  padding: 0;
  margin: 0;
  width: 100%;
  height: 100vh;
  overflow-y: scroll;
  scroll-snap-type: y mandatory; /* Essa é a propriedade que faz o scroll */
}

.language {
  font-size: 40px;
  font-family: Arial, Helvetica, sans-serif;
  color: rgba(0, 0, 0, 0.3);
  text-decoration: none;
}

.icons-header {
  width: 35px;
  height: 35px;
  opacity: 50%;
  text-decoration: none;
  margin-left: 10px;
}

.block {
  display: flex;
  justify-content: center;
}

.profile {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.gps {
  width: 15px;
  opacity: 50%;
  text-decoration: none;
  margin-left: 8px;
}

.location {
  font-size: 18px;
  padding-top: 30px;
}

.icons-socials {
  width: 35px;
  height: 35px;
  opacity: 50%;
  margin-left: 10px;
  text-decoration: none;
}

.icons-profile {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 18px;
}

.main-content {
  height: 100vh;
  background-image: url("../images/wavy.png");
  background-position: right;
  background-repeat: no-repeat;
  background-size: 9%;

  scroll-snap-align: center;
}

.title-main-content {
  font-family: "Cherry Bomb", sans-serif;
  font-size: 128px;
  color: var(--c-text);
  margin: 0;
  line-height: 80%;
  padding-bottom: 30px;
}

.name {
  color: var(--c-text);
}

.mid-main-content {
  margin-left: 100px;
  display: flex;
  flex-direction: column;
  width: 600px;
}

.text-main-content {
  padding-bottom: 50px;
}

.bottom-main-content {
  display: flex;
  align-items: center;
}

.hover-effect:hover > a {
  color: rgba(0, 0, 0, 1);
}

.hover-effect:hover > img {
  opacity: 100%;
}

.arrow {
  width: 25px;
  opacity: 50%;
  text-decoration: none;
  margin-right: 10px;
}

.button-main-content {
  font-family: "Tuffy", sans-serif;
  font-size: 22px;
  color: rgba(0, 0, 0, 0.5);
  text-decoration: none;
  margin-right: 60px;
}

.wavy-background {
  display: flex;
  flex-direction: column;
  position: absolute;
  right: 0;
}

.wavy {
  width: 150px;
}

.project-content {
  background-color: var(--c-background);
  height: 100vh;
  left: 0;
  right: 0;
  padding-top: 100px;
  background-image: url(../svg/organic-shape1.svg);
  background-position: left -30px bottom -35px;
  background-repeat: no-repeat;
  scroll-snap-align: center;
}

.project-title {
  font-family: "Cherry Bomb", sans-serif;
  font-size: 96px;
  color: var(--c-text);
  display: flex;
  justify-content: flex-end;
  margin-right: 100px;
  letter-spacing: 4px;
  padding-bottom: 100px;
}

.projects {
  display: flex;
  justify-content: space-around;
  margin: 0 180px;
}

.project-infos {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 350px;
}

.project-subtitle {
  font-family: "Tuffy", sans-serif;
  font-weight: 700;
  color: var(--c-text);
  font-size: 30px;
}

.project-text {
  font-size: 20px;
  margin-left: 30px;
  margin-right: 30px;
  text-align: center;
}

.icon-repo {
  width: 35px;
  text-decoration: none;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

.icon-repo-text {
  font-family: "Tuffy", sans-serif;
  color: var(--c-text);
  font-size: 20px;
}

.project-wm {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 170px;
  padding-top: 30px;
}

.studying-info {
  display: flex;
  justify-content: center;
  align-items: center;
}

.studying-text {
  opacity: 50%;
  font-size: 20px;
}

.about-me {
  padding-left: 150px;
  background-image: url(../svg/organic-shape2.svg);
  background-position: right -30px bottom -125px;
  background-repeat: no-repeat;
  background-size: 1050px 1050px;
  height: 100vh;
  scroll-snap-align: center;

.about-me-title {
  font-family: "Cherry Bomb", sans-serif;
  font-size: 96px;
  color: var(--c-text);
  display: flex;
  justify-content: flex-start;
  letter-spacing: 4px;
  padding-top: 50px;
  padding-bottom: 100px;
}

.about-me-content {
  /* background-image: url("../images/bg_aboutme_light.jpg"); */
  /* width: 100%; */
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

/* */

#second-text {
  display: flex;
  align-self: flex-end;
  color: #f5f5f5;
}

.about-me-text {
  width: 600px;
  margin-right: 100px;
}

.bold-brown {
  color: var(--c-text);
}

.bold-pink {
  color: var(--c-light-pink);
}

.footer-text {
  font-size: 16px;
  color: var(--c-text);
}

.cat {
  width: 100px;
}

